[gd_scene load_steps=3 format=3 uid="uid://bj7x1mupgdshf"]

[ext_resource type="Script" uid="uid://4bwqjj1guchx" path="res://scripts/MainMenu.gd" id="1_6dqvl"]
[ext_resource type="Theme" uid="uid://c5k8pqw4dqh3k" path="res://themes/medieval_theme.tres" id="2_theme"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_6dqvl")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.05, 1)

[node name="GradientOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.08, 0.2)

[node name="MenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -200.0
offset_right = 180.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 28
text = "SPELLCAST SURVIVORS"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "PLAY GAME"

[node name="OptionsButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "OPTIONS"

[node name="HowToPlayButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "HOW TO PLAY"

[node name="QuitButton" type="Button" parent="MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="MenuPanel/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
